# open_manipulator_find_object_2d

./: CMakeLists.txt  README.md  package.xml
launch/: find_object.launch  object_detection.launch  open_manipulator_picking_gazebo.launch  open_manipulator_tracking_gazebo.launch  open_manipulator_with_d435_upload.launch  pick_and_place.launch  tracking.launch
models/objectbase/: model.config  model.sdf
models/pick_box/: model.config  model.sdf
models/pick_box/materials/scripts/: pick_box.material
models/pick_object/beer/: model-1_4.sdf
nodes/: pick_and_place  tracking
rviz/: find_object.rviz
urdf/: d435.urdf.xacro  open_manipulator_with_d435.gazebo.xacro  open_manipulator_with_d435_robot.urdf.xacro
worlds/: pick.world  tracking.world
